<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:checkableBehavior="single"
        android:title="Group">
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/baseline_home_24"-->
<!--            android:title="@string/menu_home" />-->
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/baseline_announcement_24"
            android:title="@string/menu_announcement" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/baseline_notification_important_24"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_alert"
            android:icon="@drawable/baseline_warning_24"
            android:title="@string/menu_alert" />
        <item
            android:id="@+id/nav_ViewReports"
            android:icon="@drawable/baseline_report_24"
            android:title="@string/view_reports" />
<!--        <item-->
<!--            android:id="@+id/nav_SystemLogs"-->
<!--            android:icon="@drawable/baseline_announcement_24"-->
<!--            android:title="@string/system_logs" />-->
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/baseline_account_box_24"
            android:title="@string/myprofile" />
        <item
            android:id="@+id/nav_tips"
            android:icon="@drawable/baseline_security_24"
            android:title="@string/tips" />
        <item
            android:id="@+id/nav_reportproblem"
            android:icon="@drawable/baseline_bug_report_24"
            android:title="@string/report_problem" />

    </group>
    <item android:title="Settings" >
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/baseline_exit_to_app_24"
                android:title="@string/signout" />
        </menu>
    </item>


</menu>
