<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_alert">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.raha_firealert.User.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_announcement"
        android:name="com.example.raha_firealert.User.ui.announcement.AnnouncementFragment"
        android:label="@string/menu_announcement"
        tools:layout="@layout/fragment_announcement" />

    <fragment
        android:id="@+id/nav_myprofile"
        android:name="com.example.raha_firealert.User.ui.my_profile.MyProfile"
        android:label="@string/myprofile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.raha_firealert.Signout"
        android:label="Signout" />
    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.raha_firealert.User.ui.alert.AlertFragment"
        android:label="Alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/nav_reportproblem"
        android:name="com.example.raha_firealert.User.ui.reportproblem.ReportProblem"
        android:label="@string/report_problem"
        tools:layout="@layout/fragment_report_problem" />
    <fragment
        android:id="@+id/nav_ViewReports"
        android:name="com.example.raha_firealert.Admin.view_reports.reports"
        android:label="Reports"
        tools:layout="@layout/fragment_reports" />
    <fragment
        android:id="@+id/nav_SystemLogs"
        android:name="com.example.raha_firealert.Admin.systemlogs.Systemlogs"
        android:label="System Logs"
        tools:layout="@layout/activity_systemlogs" />
    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.raha_firealert.User.ui.safetytips.SafetyTips"
        android:label="Safety Tips"
        tools:layout="@layout/fragment_safety_tips" />
    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.example.raha_firealert.Admin.alert.Alerts"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts" />

</navigation>